# p3dfft.3

./: AUTHORS  COPYING  COPYRIGHT  Cwrap.h  Fwrap.h  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  ar-lib  compile  config.h.in  config.status  configure  configure.ac  configure.scan  deriv.C  exec.C  init.C  init1.C  install-sh  makefile  makefile.ac  makefile.old  makefile.sdsc  makefile.tacc  missing  p3dfft.h  p3dfft1.h  p3dfft3config.h.in  p3dfft3config.h.in~  plan.C  stamp-h1  templ.C  test1.C  test1D.C  test2.C  test2D.C  (+2 more)
C/: makefile  makefile.sdsc  test1D.c  test1D_cos.c  test1D_cos_complex.c  test1D_r2c.c  test2D.c  test3D.c  test3D_c2c.c  test3D_c2c_inplace.c  test3D_dec1D.c  test3D_dec2D.c  test3D_r2c.c  test_deriv.c  test_trans1D.c
C++/: makefile  test1D.C  test1D_cos.C  test1D_cos_complex.C  test1D_sin.C  test2D.C  test3D_c2c.C  test3D_c2c_inplace.C  test3D_dec1D.C  test3D_dec2D.C  test3D_r2c.C  test_cos.C  test_cos_complex.C  test_deriv.C  test_sin.C  test_transplan.C
FORTRAN/: makefile  makefile.sdsc  p3dfft++.f90  p3dfft_plus_plus.mod  test1D_cos.f90  test1D_cos_complex.f90  test1D_r2c.f90  test2D  test2D.f90  test2D_f  test3D_c2c.f90  test3D_c2c_inplace.f90  test3D_r2c.f90  test_deriv.f90  test_trans1D.f90  test_trans1D_f  tmp.f90  wrap.f90
autom4te.cache/: output.0  output.1  output.2  output.6  requests  traces.0  traces.1  traces.2  traces.4  traces.5  traces.6
docs/: .readthedocs.yml  Makefile  make.bat  requirements.txt
docs/source/: Common Errors.rst  Installation.rst  Tutorial.rst  conf.py  contact.rst  download_p3dfft++.rst  download_p3dfft.rst  home.rst  index.rst  install_p3dfft++.rst  install_p3dfft.rst  license_of_use.rst  p3dfft++_c++_examples.rst  p3dfft++_c++_reference.rst  p3dfft++_documentation.rst  p3dfft++_fortran_examples.rst  p3dfft++_fortran_reference.rst  p3dfft++_tutorial.rst  p3dfft_documentation.rst
docs/source/_static/: theme_overrides.css
extra/: TESTING_README  all_configs.py  configure.py  makejob.py
include/: Cwrap.h  Fwrap.h  p3dfft.h  p3dfft.h.in  p3dfft3config.h
persistent/: Makefile.in
sample/: Makefile  Makefile.am  Makefile.am.dis  Makefile.in
sample-impi/C/: Makefile.in
sample-impi/C++/: Makefile.in
sample-impi/FORTRAN/: Makefile.in
sample/C/: Makefile  Makefile.am  Makefile.in  Makefile.user.C  compiler_check.h  memord3d  test1D_cos.c  test1D_cos_c  test1D_cos_complex.c  test1D_cos_complex_c  test1D_r2c.c  test1D_r2c_c  test2D+empty.c  test3D_c2c.c  test3D_c2c_c  test3D_c2c_inplace.c  test3D_c2c_inplace_c  test3D_c2c_same_grid.c  test3D_r2c.c  test3D_r2c1.c  test3D_r2c_c  test3D_r2c_memord.c  test3D_r2c_memord_c  test3D_r2c_single.c  testIDIR_deriv2_c  testIDIR_deriv_c  test_deriv.c  test_deriv2.c  test_trans1D.c
sample/C++/: Makefile  Makefile.am  Makefile.in  Makefile.user.C++  bench_c2c.C  do4DFFT_ak.C  do4DFFT_ak_single.C  makefile  makefile.old  makefile.sdsc  makefile.tacc  test1D_cos.C  test1D_cos_complex.C  test1D_cos_complex_cpp  test1D_cos_cpp  test1D_sin.C  test1D_sin_cpp  test1D_transplan_cpp  test3D_c2c.C  test3D_c2c_cpp  test3D_c2c_inplace.C  test3D_c2c_inplace_cpp  test3D_r2c.C  test3D_r2c_cpp  test3D_r2c_single.C  test4D_r2c.C  testIDIR_deriv2_cpp  testIDIR_deriv_cpp  test_cos.C  test_cos_complex.C  test_deriv.C  test_deriv2.C  test_sin.C  test_transplan.C  trans.in
sample/FORTRAN/: Makefile  Makefile.am  Makefile.am.notready  Makefile.in  Makefile.user.Fortran  makefile  makefile.gnu  makefile.sdsc  p3dfft++.f90  p3dfft_plus_plus.mod  test1D_cos.f90  test1D_cos_complex.f90  test1D_cos_complex_f  test1D_cos_f  test1D_r2c.f90  test1D_r2c_f  test2D.f90  test3D_c2c.f90  test3D_c2c_f  test3D_c2c_inplace.f90  test3D_c2c_inplace_f  test3D_r2c.f90  test3D_r2c_f  test3D_r2c_single.f90  testIDIR_deriv2_f  testIDIR_deriv_f  test_deriv.f90  test_deriv2.f90  test_trans1D.f90  wrap.f90
sample/FORTRAN/cpu/: Makefile  Makefile.am  Makefile.am1  Makefile.in  Makefile.in1  Makefile.user.Fortran  test1D_cos.f90  test1D_r2c.f90  test3D_r2c.f90  test3D_r2c_single.f90  test_deriv.f90
sample/FORTRAN/cuda/: Makefile  Makefile.am  Makefile.in  test1D_cos_complex.f90  test1D_r2c.f90  test3D_c2c.f90  test3D_c2c.f90~  test3D_c2c_inplace.f90  test3D_c2c_inplace.f90~  test3D_r2c.f90  test_deriv.f90  test_deriv2.f90
